--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 	</div>
 	<!--//footer-->
 	<!--smooth-scrolling-of-move-up-->
-	<!--<script type="text/javascript">
+	<script type="text/javascript">
 		$(document).ready(function() {
 			/*
 			var defaults = {
@@ -322,7 +322,7 @@
 			*/
 			
 			$().UItoTop({ easingType: 'easeOutQuart' });
-			
+			alert("hello");
 		});
 	</script>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
@@ -330,6 +330,6 @@
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-   <!-- <script src="js/bootstrap.js"></script>-->-->
+   <script src="js/bootstrap.js"></script>-->
 </body>
 </html>
